alterando no html,  o link do repositório github

--- a/index-ethosx.html
+++ b/index-ethosx.html
@@ -24,7 +24,7 @@
             
             <!-- pescoço -->
             <div id= "Neck">
-                <h2 id= "Sub-Top">Nome: Daniel Sonobe Silveira<br>Endereço do repositório no github: https://github.com/Sonobe-br/Challenge-Matrix</h2>
+                <h2 id= "Sub-Top">Nome: Daniel Sonobe Silveira<br>Endereço do repositório no github: https://github.com/Sonobe-br/Ethosx</h2>
                 <div id="minhaFoto">
                     <img src="../avaliacao/photo_dani.jpg" width= "12%" height= "12%" ></h1>
                 </div>
